--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,11 @@ playServicesAuth = "21.1.0"
 room = "2.6.1"
 compose = "1.1.0"
 lottie = "4.2.2"
+secretsGradlePlugin = "2.0.1"
 workmanager = "2.7.1"
 material3 = "1.3.0-alpha05"
+mapsCompose = "4.3.3"
+mapsecrets = "2.0.1"
 
 [libraries]
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -59,6 +62,9 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth" }
+
+maps = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose"}
+maps-secrets-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "mapsecrets" }
 
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 
