--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,10 +7,8 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  publish-firebase-release-apk:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 17
@@ -20,11 +18,30 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     - name: build release 
-      run: ./gradlew assembleRelease
-    - name: upload artifact to Firebase App Distribution
+      run: ./gradlew :app:assembleRelease
+    - name: upload release apk to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1
       with:
         appId: ${{secrets.FIREBASE_APP_ID}}
         serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
-        groups: testers
+        groups: testers-release
         file: app/build/outputs/apk/release/app-release.apk
+  publish-firebase-release-bundle:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+    - name: bundle release
+      run: ./gradlew :app:bundleRelease
+    - name: upload release bundle to Firebase App Distribution
+      uses: wzieba/Firebase-Distribution-Github-Action@v1
+      with:
+        appId: ${{secrets.FIREBASE_APP_ID}}
+        serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+        groups: testers-release
+        file: app/build/outputs/bundle/release/app-release.apk
