--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 agp = "8.3.2"
 kotlin = "1.9.0"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 firebaseBom = "32.8.1"
 junit = "4.13.2"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.04.01"
-navigationCompose = "2.7.7"
-coroutines = "1.6.4"
+composeBom = "2024.09.02"
+navigationCompose = "2.8.1"
+coroutines = "1.8.0"
 lifecycle = "2.4.0"
 koinBom = "3.5.6"
 playServices = "21.1.0"
@@ -18,7 +18,7 @@ compose = "1.1.0"
 lottie = "4.2.2"
 secretsGradlePlugin = "2.0.1"
 workmanager = "2.7.1"
-material3 = "1.3.0-alpha05"
+material3 = "1.3.0"
 mapsCompose = "4.3.3"
 mapsecrets = "2.0.1"
 okhttp = "4.12.0"
