--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ okhttp = "4.12.0"
 retrofit = "2.11.0"
 serialization = "1.6.1"
 accompanist = "0.34.0"
+morfly-bottomsheet = "0.1.0"
 
 [libraries]
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -47,6 +48,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 androidx-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
 
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref="accompanist"}
+morfly-bottomsheet = { module = "io.morfly.compose:advanced-bottomsheet-material3", version.ref="morfly-bottomsheet"}
 
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
