--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ firebaseBom = "32.8.1"
 junit = "4.13.2"
 strikt = "0.34.0"
 lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
+activityCompose = "1.10.1"
 composeBom = "2025.05.00"
 navigationCompose = "2.8.1"
 coroutines = "1.8.0"
@@ -27,6 +27,7 @@ serialization = "1.6.1"
 accompanist = "0.34.0"
 morfly-bottomsheet = "0.1.0"
 coil = "2.7.0"
+coreSplashScreen = "1.0.1"
 
 [libraries]
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -90,11 +91,12 @@ reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.4.3" 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 strikt = { module = "io.strikt:strikt-core", version.ref = "strikt" }
 
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashScreen" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServicesPlugin" }
 firebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlyticsPlugin" }
 firebasePerformance = { id = "com.google.firebase.firebase-perf", version.ref = "performancePlugin" }
-
 
