--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,9 +10,8 @@ junit = "4.13.2"
 strikt = "0.34.0"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.09.02"
+composeBom = "2025.05.00"
 navigationCompose = "2.8.1"
-composeAlpha = "1.8.0-alpha08"
 coroutines = "1.8.0"
 koinBom = "3.5.6"
 playServices = "21.2.0"
@@ -40,9 +39,9 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "composeAlpha" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "composeAlpha" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "composeAlpha" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
@@ -86,7 +85,7 @@ kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-
 coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 lottie = { module = "com.airbnb.android:lottie-compose", version = "6.6.2" }
 
-reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.4.3"}
+reorderable = { module = "sh.calvin.reorderable:reorderable", version = "2.4.3" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 strikt = { module = "io.strikt:strikt-core", version.ref = "strikt" }
