--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ googleServicesPlugin = "4.4.2"
 crashlyticsPlugin = "3.0.4"
 performancePlugin = "1.4.2"
 coreKtx = "1.16.0"
-firebaseBom = "32.8.1"
+firebaseBom = "33.15.0"
 junit = "4.13.2"
 strikt = "0.35.1"
 lifecycleRuntimeKtx = "2.9.1"
@@ -13,7 +13,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.00"
 navigationCompose = "2.9.0"
 coroutines = "1.10.2"
-koinBom = "3.5.6"
+koinBom = "4.1.0"
 playServices = "21.3.0"
 room = "2.7.1"
 material3 = "1.3.2"
@@ -22,7 +22,7 @@ mapsecrets = "2.0.1"
 credentials = "1.5.0"
 googleIdentity = "1.1.1"
 okhttp = "4.12.0"
-retrofit = "2.11.0"
+retrofit = "3.0.0"
 serialization = "1.8.1"
 accompanist = "0.37.3"
 morfly-bottomsheet = "0.1.0"
@@ -38,6 +38,7 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version = "1.1.7" }
 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
