ci: use environment variables for release signing config
This commit updates the release signing configuration to use environment variables for sensitive information like passwords and aliases.

Key Changes:
- `app/build.gradle.kts`:
    - Modified the "release" signing config to read `storePassword`, `keyAlias`, and `keyPassword` from environment variables (`KEYSTORE_PASSWORD`, `KEY_ALIAS`, `KEY_PASSWORD` respectively).
    - Added a fallback to default "banana" values if environment variables are not set.
    - Implemented logic to use `../certs/release.keystore` if it exists, otherwise fallback to `../certs/fakeRelease.keystore`.
- `.github/workflows/google-play-release.yml`:
    - Added `KEYSTORE_PASSWORD`, `KEY_ALIAS`, and `KEY_PASSWORD` environment variables to the "Build release AAB" step, using GitHub secrets.

This change enhances security by avoiding hardcoded credentials in the build script and allows for different signing configurations in different environments (e.g., local development vs. CI).

--- a/.github/workflows/firebase-distribution.yml
+++ b/.github/workflows/firebase-distribution.yml
@@ -30,6 +30,10 @@ jobs:
           cache-read-only: false
       - name: assemble release
         run: ./gradlew :app:assembleRelease
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       - name: upload release apk to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
