feat: integrate in-app updates with custom UI
This commit introduces in-app update functionality with a custom UI component.

Key Changes:
- Add `in-app-update-compose` and `in-app-update-compose-mui` dependencies.
- Create `AppUpdateButton` composable to display update status and trigger updates.
  - Shows different states: Hidden, Available, Downloading (with progress), Ready to Install.
  - Includes specific icons and text for each state.
  - Uses animations for visual feedback (pulse for "Ready" state).
- Integrate `AppUpdateButton` into `MapBottomSheetScaffold`.
  - The button is displayed at the top center of the screen, below the top app bar.
  - Maps `InAppUpdateState` from the library to the custom `AppUpdateButtonState`.
  - Supports both FLEXIBLE and IMMEDIATE update modes based on `InAppUpdateState`.
- Add previews for different states of `AppUpdateButton`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ accompanist = "0.37.3"
 morfly-bottomsheet = "0.1.0"
 coil = "2.7.0"
 coreSplashScreen = "1.0.1"
+inAppUpdate = "1.3.1"
 
 [libraries]
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -99,6 +100,9 @@ strikt = { module = "io.strikt:strikt-core", version.ref = "strikt" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
 
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashScreen" }
+
+inAppUpdateCompose = { group = "se.warting.in-app-update", name = "in-app-update-compose", version.ref = "inAppUpdate" }
+inAppUpdateCompose-material = { group = "se.warting.in-app-update", name = "in-app-update-compose-mui", version.ref = "inAppUpdate" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
