--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ coil = "2.7.0"
 coreSplashScreen = "1.0.1"
 appcompat = "1.7.1"
 inAppUpdate = "1.3.1"
+playReview = "2.0.2"
 
 [libraries]
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -85,6 +86,7 @@ credentials-playServices = { module = "androidx.credentials:credentials-play-ser
 credentials-googleIdentity = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleIdentity" }
 
 playServices-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServices" }
+play-review = { group = "com.google.android.play", name = "review-ktx", version.ref = "playReview" }
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
