feat: integrate Amplitude analytics
This commit introduces Amplitude analytics to the project.

Key Changes:
- Added Amplitude and Amplitude Session Replay dependencies.
- Created `AmplitudeTracker` class to send events to Amplitude.
- Configured Amplitude with different API keys and flush intervals for debug and release builds.
- Enabled autocapture for sessions, app lifecycles, deep links, and frustration interactions.
- Set server zone to EU.
- Integrated `AmplitudeTracker` into the existing analytics framework.
- Analytics opt-out is respected based on `AnalyticsSettingsDataSource`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -72,6 +72,9 @@ firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-perf = { module = "com.google.firebase:firebase-perf" }
 firebase-config = { module = "com.google.firebase:firebase-config" }
 
+amplitude = { module = "com.amplitude:analytics-android", version = "1.22.2" }
+amplitude-sessionReplay = { module = "com.amplitude:plugin-session-replay-android", version = "0.20.15" }
+
 maps = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 maps-secrets-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "mapsecrets" }
 
