feat: introduce debug menu
This commit introduces a new, extensible debug menu system. It replaces the previous hardcoded debug options with a modular approach, allowing for easier addition and management of debugging tools.

**Key Changes:**

*   **New `debug-menu` module:**
    *   Provides core components for building debug menus (`DebugMenu`, `DebugModule`, `DebugItem`).
    *   Includes an `OverlayLogger` system for displaying real-time information (e.g., network requests) on top of the app UI.
    *   Introduces `DebugModuleDataSource` for persisting module-specific settings.
*   **Refactored Debug Features:**
    *   **Network Debugging:**
        *   Migrated HTTP request overlay to the new `OverlayLogger` system.
        *   Added UI for selecting network environments (Prod, Stage, Dev, Custom).
    *   **Location Debugging:**
        *   Migrated fake location toggle to a dedicated `LocationDebugModule`.
*   **Integration:**
    *   Added a floating debug button on the map screen to access the new debug menu.
    *   The debug menu is now presented as a modal bottom sheet via `DebugMenuActivity`.
    *   A persistent notification is shown in debug builds to quickly access the debug menu.
    *   Dependency injection (`Koin`) is updated to support the new debug menu components and view models.
*   **UI Enhancements:**
    *   `SegmentedControl` now accepts `modifier` as a parameter.
    *   `CustomFab` now accepts a `size` parameter.
*   **Code Cleanup:**
    *   Removed old, hardcoded debug UI elements and related files (`DebugMenu.kt`, `DebugLocationSetting.kt`, `HttpOverlayLayout.kt`, etc. from the `app` module).

**Benefits:**

*   **Extensibility:** Easier to add new debug functionalities as separate modules.
*   **Organization:** Better separation of concerns for debug-related code.
*   **Improved UX:** Centralized access to debug tools via a dedicated menu and notification.
*   **Maintainability:** More structured and maintainable debug codebase.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ accompanist = "0.37.3"
 morfly-bottomsheet = "0.1.0"
 coil = "2.7.0"
 coreSplashScreen = "1.0.1"
+appcompat = "1.7.1"
 inAppUpdate = "1.3.1"
 
 [libraries]
@@ -103,6 +104,7 @@ strikt = { module = "io.strikt:strikt-core", version.ref = "strikt" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
 
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashScreen" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
 inAppUpdateCompose = { group = "se.warting.in-app-update", name = "in-app-update-compose", version.ref = "inAppUpdate" }
 inAppUpdateCompose-material = { group = "se.warting.in-app-update", name = "in-app-update-compose-mui", version.ref = "inAppUpdate" }
@@ -116,4 +118,5 @@ firebasePerformance = { id = "com.google.firebase.firebase-perf", version.ref = 
 ksp = { id = "com.google.devtools.ksp", version = "2.2.20-2.0.2" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
