--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ coreSplashScreen = "1.0.1"
 appcompat = "1.7.1"
 inAppUpdate = "1.3.1"
 playReview = "2.0.2"
+statsig = "4.42.2"
 
 [libraries]
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -110,6 +111,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 
 inAppUpdateCompose = { group = "se.warting.in-app-update", name = "in-app-update-compose", version.ref = "inAppUpdate" }
 inAppUpdateCompose-material = { group = "se.warting.in-app-update", name = "in-app-update-compose-mui", version.ref = "inAppUpdate" }
+statsig-sdk = { group = "com.statsig", name = "android-sdk", version.ref = "statsig" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
