--- a/.github/workflows/google-play-release.yml
+++ b/.github/workflows/google-play-release.yml
@@ -1,9 +1,8 @@
-name: Release - Google Play Internal Track
+name: Release - Google Play
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [ published ]
 
 jobs:
   publish-google-play:
@@ -11,6 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Validate release tag matches version
+        run: |
+          if [ ! -f "version.properties" ]; then
+            echo "Warning: version.properties not found, skipping validation"
+            exit 0
+          fi
+
+          source version.properties
+          EXPECTED_TAG="v${major}.${minor}.${patch}"
+
+          if [ "${{ github.event.release.tag_name }}" != "$EXPECTED_TAG" ]; then
+            echo "Error: Release tag ${{ github.event.release.tag_name }} doesn't match version ${EXPECTED_TAG}"
+            exit 1
+          fi
+
+          echo "✓ Release tag ${{ github.event.release.tag_name }} matches version ${major}.${minor}.${patch}"
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -43,44 +58,4 @@ jobs:
           packageName: com.sloy.sevibus
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
-          status: draft
-
-  create-github-release:
-    name: Create GitHub Release
-    runs-on: ubuntu-latest
-    needs: publish-google-play
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Get previous tag
-        id: prev-tag
-        run: |
-          git fetch --tags
-          PREV_TAG=$(git tag --sort=-version:refname | sed -n '2p')
-          echo "prev_tag=$PREV_TAG" >> $GITHUB_OUTPUT
-      - name: Generate release notes
-        id: release-notes
-        run: |
-          if [ -n "${{ steps.prev-tag.outputs.prev_tag }}" ]; then
-            COMMITS=$(git log --pretty=format:"- %s (%h)" ${{ steps.prev-tag.outputs.prev_tag }}..${{ github.ref_name }})
-          else
-            COMMITS=$(git log --pretty=format:"- %s (%h)")
-          fi
-          echo "commits<<EOF" >> $GITHUB_OUTPUT
-          echo "$COMMITS" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
-          body: |
-            ## Changes in this release:
-            
-            ${{ steps.release-notes.outputs.commits }}
-            
-            ---
-            This release has been automatically deployed to Google Play Internal Track.
-          draft: false
-          prerelease: false
+          releaseName: "${{ github.event.release.name }}"
