--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,6 +98,9 @@ jobs:
     needs: release
     permissions:
       contents: write
+    outputs:
+      tag: ${{ steps.release_info.outputs.tag }}
+      release_name: ${{ steps.release_info.outputs.tag }}${{ github.event.inputs.release_name && format(' - {0}', github.event.inputs.release_name) || '' }}
 
     steps:
       - name: Checkout repository
@@ -146,4 +149,57 @@ jobs:
             This release will be automatically deployed to Google Play Internal Track.
           draft: false
           prerelease: false
+
+  deploy-google-play:
+    name: Deploy to Google Play
+    runs-on: ubuntu-latest
+    needs: create-github-release
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.create-github-release.outputs.tag }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Create secret.properties
+        run: echo "MAPS_API_KEY=${{ secrets.MAPS_API_KEY }}" > secret.properties
+
+      - name: Create google-services.json
+        run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+
+      - name: Decode Keystore
+        run: |
+          mkdir -p certs
+          echo "${{ secrets.RELEASE_KEYSTORE_BASE64 }}" | base64 -d > certs/release.keystore
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: wrapper
+          cache-read-only: false
+
+      - name: Build release AAB
+        run: ./gradlew :app:bundleRelease
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+
+      - name: Upload to Google Play Internal Track
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}
+          packageName: com.sloy.sevibus
+          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+          track: internal
+          releaseName: "${{ needs.create-github-release.outputs.release_name }}"
 
