--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -202,4 +202,5 @@ jobs:
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: internal
           releaseName: "${{ needs.create-github-release.outputs.release_name }}"
+          mappingFile: app/build/outputs/mapping/release/mapping.txt
 
