fix(ci): correct release notes generation by specifying proper tag range
Previously, release notes were empty because the script ran after both
the release commit and "prepare next dev iteration" commit were created.
This caused the script to look for changes in the range "v5.5.0..HEAD"
(which only contained the dev iteration commit) instead of the actual
release range "v5.4.2..v5.5.0".

The fix explicitly determines the previous release tag and passes the
correct --from and --to parameters to the release notes script, ensuring
all commits included in the release are properly documented.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,7 +119,12 @@ jobs:
       - name: Generate release notes
         id: release-notes
         run: |
-          RELEASE_NOTES=$(./scripts/generate-release-notes.sh --format markdown)
+          # Get the current release tag and the previous one
+          CURRENT_TAG="${{ steps.release_info.outputs.tag }}"
+          PREVIOUS_TAG=$(git tag --sort=-version:refname | grep -v "^${CURRENT_TAG}$" | head -1)
+
+          echo "Generating release notes from $PREVIOUS_TAG to $CURRENT_TAG"
+          RELEASE_NOTES=$(./scripts/generate-release-notes.sh --format markdown --from "$PREVIOUS_TAG" --to "$CURRENT_TAG")
           echo "release_notes<<EOF" >> $GITHUB_OUTPUT
           echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
