feat(screenshot-tests): fix configuration and generate reference screenshots
Phase 3 fixes and completion:
- Fix artifact coordinates: com.android.tools.screenshot (not com.android.compose.screenshot)
- Add @Preview annotation requirement for @PreviewTest (both annotations needed)
- Upgrade project to Java 21 for screenshot testing compatibility
- Add screenshotTest AndroidManifest.xml
- Generate 11 reference screenshots for 3 pilot components:
  * LineIndicatorScreenshotTests: 1 screenshot
  * InfoBannerComponentScreenshotTests: 4 screenshots (including @PreviewLightDark variants)
  * BusArrivalListItemScreenshotTests: 6 state variations

Reference images stored in: app/src/screenshotTestDebug/reference/

All screenshot tests now passing ✅

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -115,7 +115,7 @@ inAppUpdateCompose = { group = "se.warting.in-app-update", name = "in-app-update
 inAppUpdateCompose-material = { group = "se.warting.in-app-update", name = "in-app-update-compose-mui", version.ref = "inAppUpdate" }
 statsig-sdk = { group = "com.statsig", name = "android-sdk", version.ref = "statsig" }
 
-compose-screenshot-validation = { module = "com.android.compose.screenshot:screenshot-validation-api", version.ref = "composeScreenshot" }
+compose-screenshot-validation = { module = "com.android.tools.screenshot:screenshot-validation-api", version.ref = "composeScreenshot" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
